# gsp_calculator_svc

./: Dockerfile  Makefile  README.md  app.py  package.json  pyproject.toml
components/: __init__.py  styles.css
tests/: test_app_import.py  test_app_integration.py  test_calculator.py  test_clear_toggle_percent.py  test_digit_operator_logic.py  test_equals_and_history.py  test_keyboard_logic.py  test_parser.py  test_readme_content.py
utils/: calculator.py  parser.py
