[tool.poetry]
name = "calculator-web-streamlit"
version = "0.1.0"
description = "Streamlit app scaffold for calculator web"
authors = ["Thesen AI <auto@thesen.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.39.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
